--- a/platformio.ini
+++ b/platformio.ini
@@ -8,9 +8,23 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:nanoatmega328]
+; [env:nanoatmega328]
+; platform = atmelavr
+; board = nanoatmega328
+; framework = arduino
+; monitor_flags=
+; 	--echo
+
+[env:nanoatmega328new]
 platform = atmelavr
-board = nanoatmega328
+board = nanoatmega328new
 framework = arduino
 monitor_flags=
-    --echo
+	--echo
+
+; [env:uno]
+; platform = atmelavr
+; board = uno
+; framework = arduino
+; monitor_flags=
+; 	--echo
